After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790950 - codec-utils: add some missing gi annotations
codec-utils: add some missing gi annotations
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.13.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-28 17:40 UTC by Thiago Sousa Santos
Modified: 2017-11-30 09:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
codec-utils: add some missing gi annotations (10.82 KB, patch)
2017-11-28 17:40 UTC, Thiago Sousa Santos
none Details | Review
codec-utils: add some missing gi annotations (10.89 KB, patch)
2017-11-29 02:58 UTC, Thiago Sousa Santos
none Details | Review
codec-utils: add some missing gi annotations (10.82 KB, patch)
2017-11-30 08:23 UTC, Thiago Sousa Santos
committed Details | Review

Description Thiago Sousa Santos 2017-11-28 17:40:00 UTC
codec-utils is missing some GI annotations. Mostly for 'out' and 'array' type parameters
Comment 1 Thiago Sousa Santos 2017-11-28 17:40:05 UTC
Created attachment 364582 [details] [review]
codec-utils: add some missing gi annotations

Missing some array and out parameters annotations
Comment 2 Sebastian Dröge (slomo) 2017-11-28 17:51:38 UTC
Comment on attachment 364582 [details] [review]
codec-utils: add some missing gi annotations

The Opus (array) ones will need a length somewhere to be usable from bindings
Comment 3 Thiago Sousa Santos 2017-11-28 19:45:16 UTC
There is a fixed-size that can be used for the ones that use channel_mapping[256] but some are just const guint8* arrays. Not sure what to do about those.
Comment 4 Sebastian Dröge (slomo) 2017-11-28 20:27:51 UTC
Are they the same length as one of the channel parameters?
Comment 5 Thiago Sousa Santos 2017-11-29 02:58:27 UTC
Created attachment 364598 [details] [review]
codec-utils: add some missing gi annotations

They are all based on the number of channels
Comment 6 Sebastian Dröge (slomo) 2017-11-29 08:24:18 UTC
Review of attachment 364598 [details] [review]:

I think this is also not ideal. It means that the channels argument disappears, and IIRC the array can be optional while the channels are not?
Comment 7 Thiago Sousa Santos 2017-11-30 08:23:08 UTC
Created attachment 364654 [details] [review]
codec-utils: add some missing gi annotations

You're right. I can't think on a way to make this work for those functions without improving gobject-introspection to have a new tag for this scenario. For now, I guess we can still have these improvements merged so that the other functions work.
Comment 8 Sebastian Dröge (slomo) 2017-11-30 09:10:56 UTC
Comment on attachment 364654 [details] [review]
codec-utils: add some missing gi annotations

Yes, go for it. Whatever we do is suboptimal, but at least improves on the current situation.
Comment 9 Thiago Sousa Santos 2017-11-30 09:29:24 UTC
commit 17e1e308a3a9488f6b30322f27a37200b0485640
Author: Thiago Santos <thiagossantos@gmail.com>
Date:   Tue Nov 28 09:33:11 2017 -0800

    codec-utils: add some missing gi annotations
    
    Missing some array and out parameters annotations
    
    https://bugzilla.gnome.org/show_bug.cgi?id=790950