codec-utils: add some missing gi annotations

Missing some array and out parameters annotations

https://bugzilla.gnome.org/show_bug.cgi?id=790950